# chanjet-openplatform-stream-java

./: .acpxrc.json  .gitignore  .gitleaksignore  CHANGELOG.md  GEMINI.md  Makefile  README.md  RELEASE_NOTES_v0.1.0.md  TASKS.md  commit_msg.txt  diff.patch  dump.rdb  openclaw-acp-wrapper.mjs  pom.xml  stability_report.md
cli/cjtcr/: Cargo.toml  Makefile  README.md  build.rs
cli/cjtcr/docs/: ARCHITECTURE.md  COMMANDS.md  LOGGING.md
cli/cjtcr/docs/pr/: dynamic_spec_discovery.md
cli/cjtcr/src/: main.rs
cli/cjtcr/src/auth/: client.rs  decorator.rs  mock_openapi.json  mod.rs  models.rs  pool.rs
cli/cjtcr/src/cmd/: api.rs  auth.rs  completion.rs  daemon.rs  dlq.rs  init.rs  log.rs  mod.rs  system.rs
cli/cjtcr/src/core/: config.rs  mod.rs  search.rs  telemetry.rs  utils.rs  vault.rs
cli/cjtcr/src/daemon/: dlq.rs  forwarder.rs  mod.rs  proxy.rs
cli/cjtcr/src/search/: mod.rs
cli/cowen/: .cowen_test_store_app_shared.db-shm  .cowen_test_store_app_shared.db-wal  .gitignore  CHANGELOG.md  CHANGELOG_INTERNAL.md  Cargo.toml  Cross.toml  Dockerfile.builder  Makefile  README.md  add_gates.py  auth_coverage.txt  build.rs  build_common.rs  check_output.txt  clippy_out.txt  commit_msg.txt  cov.txt  coverage.txt  cowen.db  deny.toml  docker-compose-mssql.yml  fix_gates.py  fix_kill.sh  innerdb  missing_auth.txt  patch.diff  patch_more.diff  patch_status.sh  patch_tests.diff  sample.txt  sample2.txt  sqlite-shm  sqlite-wal  store_coverage.txt  test_67.sh  test_sysinfo.rs  update_cargo.py
cli/cowen/.cargo/: audit.toml  config.toml
cli/cowen/crates/cowen-ai/: Cargo.toml  README.md  build.rs
cli/cowen/crates/cowen-auth/: Cargo.toml  README.md
cli/cowen/crates/cowen-cli/: Cargo.toml  build.rs
cli/cowen/crates/cowen-common/: Cargo.toml  build.rs
cli/cowen/crates/cowen-config/: Cargo.toml
cli/cowen/crates/cowen-daemon/: Cargo.toml  build.rs
cli/cowen/crates/cowen-doctor/: Cargo.toml
cli/cowen/crates/cowen-infra/: Cargo.toml
cli/cowen/crates/cowen-monitor/: Cargo.toml
cli/cowen/crates/cowen-plugin/: Cargo.toml
cli/cowen/crates/cowen-search/: Cargo.toml
cli/cowen/crates/cowen-search-embedding/: Cargo.toml
cli/cowen/crates/cowen-server/: Cargo.toml  README.md  build.rs
cli/cowen/crates/cowen-signer/: Cargo.toml
cli/cowen/crates/cowen-store/: Cargo.toml  README.md
cli/cowen/crates/cowen-sys/: Cargo.toml
cli/cowen/demo-app/: package.json  server.js
cli/cowen/demo-app/public/: logout.html
cli/cowen/dist_assets/: QUICK_START.txt  store_app_template.yaml
cli/cowen/dist_assets/keys/: official_dev.pk8  official_dev_cert.json  root_private.pk8
cli/cowen/dist_assets/linux/: install.sh
cli/cowen/dist_assets/macos/: cowen-uninstall
cli/cowen/dist_assets/usage/: OPERATIONS.md  download.md  self_built.md  store_app.md
cli/cowen/dist_assets/windows/: install.ps1
cli/cowen/docs/: ARCHITECTURE.md  ARCHITECTURE_AUDIT_REPORT.md  COMMANDS.md  DISTRIBUTION.md  HLD-v0.5.0-Identity-Aware-Gateway.md  HLD.md  LLD-v0.5.0-Identity-Aware-Gateway.md  LLD.md  LOGGING.md  OPEN_PLATFORM_APIS.md  PLUGIN_ARCH_EVOLUTION.md  PLUGIN_SECURITY.md  PRD-v0.4.1.md  PRD-v0.5.0-Identity-Aware-Gateway.md  PRD.md  PRD_v0.3.5.md  TECHNICAL_SPEC.md  WBS.md  oauth2-token-api.yaml  todo.md  v0.3.5_Closing_Report.md  开放平台应用商店token维护逻辑.md
cli/cowen/docs/LLD/: LLD-20260427-COWEN-MAINTENANCE.md
cli/cowen/docs/PRD/: PRD-20260427-COWEN-MAINTENANCE.md
cli/cowen/docs/archive/: 2026-04-10-dynamic_spec_discovery.md  ARCHITECTURE_AUDIT_REPORT.md  COWEN_PLUGIN_PLATFORM_WHITEPAPER.md  HOST_DESIGN.md  PLUGIN_ARCH_EVOLUTION.md  PLUGIN_MANIFEST_SPEC.md  completed_tasks.md  cowen-final-security-audit.md
cli/cowen/docs/auth/: OAUTH2.md  SELF_BUILT.md  STORE_APP.md
cli/cowen/docs/bugs/: BUG-20260423-WINDOWS-UPDATE-STUCK.md
cli/cowen/docs/improvements/: UX-20260423-OAUTH2-TIMEOUT-CLEANUP.md
cli/cowen/docs/mcp/: HOST_DESIGN.md  MCP_DEVELOPMENT_PLAN.md  MCP_TRANSITION_DESIGN.md  PLUGIN_ARCH_EVOLUTION.md  PLUGIN_DESIGN.md
cli/cowen/docs/plugins/: COWEN_PLUGIN_PLATFORM_WHITEPAPER.md  HOST_DESIGN.md  MCP_TRANSITION_DESIGN.md  PLUGIN_DESIGN.md  wasm_plugin_architecture_design.md
cli/cowen/docs/pr/: DESIGN_v0.2.0_OAuth2_PKCE_Implementation.md  PRD_v0.2.0_OAuth2_PKCE_Auth_Mode.md  authsite-oauth2-standard.md  (+2 more)
cli/cowen/make/: build.mk  db.mk  macros.mk  package.mk  test.mk
cli/cowen/proto/: README.md  daemon.proto  native_api_registry.proto  native_audit.proto  native_auth.proto  native_config.proto  native_dlq.proto  native_system.proto  native_worker.proto  public_system.proto
cli/cowen/scripts/: check_duplication.py  check_os_macro_leak.py  coverage_gate.py  generate_model_checksum.py  quality_gate.sh  run_tests_with_coverage.sh  split_model.py  test_check_os_macro_leak.py
cli/cowen/src/: lib.rs  main.rs  security_tests.rs
cli/cowen/tests/: Dockerfile.linux  Dockerfile.linux.base  MOCK_TEST_PLAN.md  README.md  TEST_CASES.md  TEST_METHODS.md  case_01_self_built.sh  case_02_store_app.sh  case_03_oauth2.sh  case_04_migration.sh  case_05_proxy_interception.sh  case_06_webhook_forwarding.sh  case_07_token_lifecycle.sh  case_08_concurrent_stress.sh  case_09_dlq_retries.sh  case_10_profile_management.sh  case_11_reconnect_resilience.sh  case_12_daemon_recovery.sh  case_13_distributed_lb.sh  case_14_shared_storage.sh  case_15_store_app_shared_storage.sh  case_16_migration_block.sh  case_17_redis_shared_storage.sh  case_18_redis_fault_tolerance.sh  case_19_ticket_auto_resend.sh  case_20_oauth2_refresh.sh  case_21_openapi_whitelist.sh  case_22_dlq_manual_retry.sh  case_24_completion.sh  case_25_status_all.sh  case_26_cluster_idempotency.sh  case_27_hybrid_data_drift.sh  case_28_store_app_multi_org_stress.sh  case_29_sidecar_startup.sh  case_30_sidecar_scaling_stress.sh  case_31_sidecar_self_built_stress.sh  case_32_mysql_shared_storage.sh  case_33_postgres_shared_storage.sh  case_34_exclusive_connection.sh  case_35_daemon_recovery_enhanced.sh  (+15 more)
cli/owenc/: Cargo.toml  Makefile  README.md
cli/owenc/docs/: LOGGING.md  TECHNICAL_SPEC.md
cli/owenc/src/: main.rs  security_tests.rs
(+1548 files in other folders)
