[workspace]
resolver = "2"
members = [
    "crates/core/*",
    "crates/services/*",
    "crates/plugins/*",
    "crates/app/*",
    "crates/tools/*"
]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"     # Optimize for size
panic = "abort"     # Remove unwinding tables (eliminates source path leaks in panics)
