[workspace]
resolver = "2"
members = [
    "crates/core/*",
    "crates/services/*",
    "crates/plugins/*",
    "crates/plugins/cowen-search-embedding/crates/*",
    "crates/app/*",
    "crates/tools/*"
, "crates/adapters/cowen-grpc-facade", "crates/adapters/cowen-wasm-facade"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"     # Optimize for size
panic = "abort"     # Remove unwinding tables (eliminates source path leaks in panics)
