[workspace]
resolver = "2"
members = [
    "crates/adapters/cowen-grpc-facade",
    "crates/adapters/cowen-wasm-facade",
    "crates/app/*",
    "crates/core/*",
    "crates/plugins/*",
    "crates/plugins/cowen-search-embedding/crates/*",
    "crates/services/*",
    "crates/tools/*",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"     # Optimize for size
panic = "abort"     # Remove unwinding tables (eliminates source path leaks in panics)
