[package]
name = "owenc"
version = "0.1.2"
edition = "2021"

[dependencies]
# CLI & Config
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4.4"
sysinfo = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
directories = "5.0"
config = "0.13"
connector-sdk = { path = "../../sdk/rust" }

# Async & Networking
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Auth & Crypto
keyring = "2.0"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
hostname = "0.3"
rand = "0.8"
regex = "1.10"
fs2 = "0.4"

# AI & Search
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
ndarray = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
logroller = "0.1"
tracing-appender = "0.2"
axum = "0.8.8"
tower = "0.5.3"
hyper = { version = "1.8.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
