[package]
name = "cowen-ai"
version = "0.3.3"
edition = "2021"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
ndarray = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
cowen-common = { path = "../cowen-common" }
