[package]
name = "cowen-cli"
version = "0.4.0"
edition = "2021"

[dependencies]
cowen-common = { path = "../cowen-common" }
cowen-config = { path = "../cowen-config" }
cowen-store = { path = "../cowen-store" }
cowen-monitor = { path = "../cowen-monitor" }
cowen-auth = { path = "../cowen-auth" }
hex = "0.4"

clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
sysinfo = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "^0.10"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
directories = "6.0"
config = "0.15"
connector-sdk = { path = "../../../../sdk/rust" }
tokio = { version = "1.50", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form", "query"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.12", features = ["v4"] }
rand = "0.10"
regex = "1.11"
urlencoding = "2.1.3"
open = "5.3"
thiserror = "2.0.11"
rustls = { version = "0.23", features = ["ring"] }
sha2 = "0.11"
inventory = "0.3"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.16"
