[package]
name = "cowen-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
hostname = "0.4"
thiserror = "2.0"
tokio = { version = "1.0", features = ["sync"] }
directories = "6.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
regex = "1.10"
uuid = { version = "1.12", features = ["v4"] }
serde_yaml = "0.9"
sysinfo = "0.38"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["json", "socks"] }
inventory = "0.3"
libc = "0.2"
sqlx = { version = "0.8", optional = true }
redis = { version = "0.27", optional = true }

[features]
sqlite = ["dep:sqlx"]
postgres = ["dep:sqlx"]
mysql = ["dep:sqlx"]
mssql = ["dep:sqlx"]
redis = ["dep:redis"]

[build-dependencies]
chrono = "0.4"
