[package]
name = "cowen-common"
version = "0.1.0"
edition = "2021"

[dependencies]
cowen-infra = { path = "../cowen-infra" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
hostname = "0.4"
thiserror = "2.0"
uuid = { version = "1.12", features = ["v4"] }
serde_yaml = "0.9"
inventory = "0.3"
tokio = { version = "1.0", features = ["sync"] }
reqwest = { version = "0.12", optional = true }
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "tls-rustls"] }
redis = { version = "0.27", optional = true }

[features]
reqwest = ["dep:reqwest"]
sqlx = ["dep:sqlx"]
redis = ["dep:redis"]
sqlite = ["sqlx", "sqlx/sqlite"]
postgres = ["sqlx", "sqlx/postgres"]
mysql = ["sqlx", "sqlx/mysql"]
mssql = []

[build-dependencies]
chrono = "0.4"
