[package]
name = "cowen-common"
version = "0.4.0"
edition = "2021"

[dependencies]
cowen-infra = { path = "../cowen-infra" }
cowen-sys = { path = "../cowen-sys" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
async-trait = "0.1"
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

hostname = "0.4"
thiserror = "2.0"
uuid = { version = "1.12", features = ["v4"] }
serde_yaml = "0.9"
inventory = "0.3"
tokio = { version = "1.0", features = ["sync"] }
sysinfo = "0.38"
ipnet = "2.12"
url = "2.5"
reqwest = { version = "0.12", optional = true }
sqlx = { version = "0.8", optional = true, features = ["runtime-tokio", "tls-rustls"] }
redis = { version = "0.27", optional = true }

[features]
reqwest = ["dep:reqwest"]
sqlx = ["dep:sqlx"]
redis = ["dep:redis"]
sqlite = ["sqlx", "sqlx/sqlite"]
postgres = ["sqlx", "sqlx/postgres"]
mysql = ["sqlx", "sqlx/mysql"]
mssql = []

[build-dependencies]
chrono = "0.4"
