[package]
name = "cowen-config"
version = "0.4.0"
edition = "2021"

[dependencies]
cowen-common = { path = "../cowen-common" }
cowen-infra = { path = "../cowen-infra" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "rt", "net", "time"] }
notify = "6.1"
tracing = "0.1"
rand = "0.8"
fs2 = "0.4"
async-trait = "0.1.89"

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1.0", features = ["full"] }
