[package]
name = "cowen-daemon"
version = "0.3.5"
edition = "2021"

[dependencies]
cowen-common = { path = "../cowen-common" }
cowen-server = { path = "../cowen-server" }
cowen-config = { path = "../cowen-config" }
cowen-monitor = { path = "../cowen-monitor" }
cowen-auth = { path = "../cowen-auth" }
cowen-store = { path = "../cowen-store", features = ["all-stores"] }

tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive"] }
futures = "0.3"
directories = "6.0"
rustls = { version = "0.23", features = ["ring"] }
chrono = "0.4.44"
uuid = { version = "1.23.1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
