[package]
name = "cowen-infra"
version = "0.3.5"
edition = "2021"

[dependencies]
libloading = "0.8"
tracing = "0.1"
anyhow = "1.0"
directories = "6.0"
regex = "1.10"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "socks"] }
sysinfo = "0.38"
