[package]
name = "cowen-infra"
version = "0.4.0"
edition = "2021"

[dependencies]
tracing = "0.1"
anyhow = "1.0"
directories = "6.0"

libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "socks"] }
sysinfo = "0.38"
ring = "0.17"
base64 = "0.22"
hex = "0.4"
async-trait = "0.1"
tokio = { version = "1.50", features = ["full"] }
sha2 = "0.10"
hostname = "0.4"

[dev-dependencies]
tempfile = "3.27.0"
