[package]
name = "cowen-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
cowen-common = { path = "../cowen-common" }
cowen-infra = { path = "../cowen-infra" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["sync", "rt", "time", "net", "macros"] }
sysinfo = "0.38"
fs2 = "0.4"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
