[package]
name = "cowen-monitor"
version = "0.3.6"
edition = "2021"

[dependencies]
cowen-common = { path = "../cowen-common" }
cowen-infra = { path = "../cowen-infra" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "registry", "time"] }
logroller = "0.1"
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1.0", features = ["sync", "rt", "time", "net", "macros"] }
sysinfo = "0.38"
fs2 = "0.4"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
axum = { version = "0.8.8", features = ["json", "tokio"] }
prometheus = "0.14"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
log = "0.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3.3"
