[package]
name = "cowen-search-embedding"
version = "0.3.3"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cowen-ai = { path = "../cowen-ai" }
cowen-search = { path = "../cowen-search" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
