[package]
name = "cowen-search-embedding"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "libcowen_search_embedding"
path = "src/main.rs"

[dependencies]
cowen-common = { path = "../cowen-common" }
cowen-ai = { path = "../cowen-ai" }
cowen-search = { path = "../cowen-search" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"


