[package]
name = "cowen-search"
version = "0.4.0"
edition = "2024"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
anyhow = "1.0"
cowen-infra = { path = "../cowen-infra" }
cowen-sys = { path = "../cowen-sys" }

[dev-dependencies]
tempfile = "3.8"

