[package]
name = "cowen-server"
version = "0.3.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "socks"] }
sysinfo = "0.38"
fs2 = "0.4"
uuid = { version = "1.12", features = ["v4"] }
directories = "6.0"
regex = "1.10"
connector-sdk = { path = "../../../../sdk/rust" }
cowen-common = { path = "../cowen-common", features = ["reqwest"] }
cowen-infra = { path = "../cowen-infra" }
cowen-config = { path = "../cowen-config" }
cowen-monitor = { path = "../cowen-monitor" }
cowen-auth = { path = "../cowen-auth" }
cowen-store = { path = "../cowen-store" }
prometheus = "0.13"
once_cell = "1.19"
scopeguard = "1.2"
rand = "0.8"
futures = "0.3.32"

[build-dependencies]
chrono = "0.4"
