[package]
name = "cowen-server"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "socks"] }
sysinfo = "0.38"
fs2 = "0.4"
uuid = { version = "1.12", features = ["v4"] }
directories = "6.0"
connector-sdk = { path = "../../../../sdk/rust" }
cowen-common = { path = "../cowen-common", features = ["reqwest"] }
cowen-infra = { path = "../cowen-infra" }
cowen-sys = { path = "../cowen-sys" }
cowen-config = { path = "../cowen-config" }
cowen-auth = { path = "../cowen-auth" }
cowen-store = { path = "../cowen-store" }
prometheus = "0.13"
wasmtime = "22.0.0"
arc-swap = "1.9.1"

scopeguard = "1.2"
rand = "0.8"
futures = "0.3.32"
tokio-util = { version = "0.7.18", features = ["full", "rt"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
wat = "1.251.0"


