[package]
name = "cowen-grpc-facade"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
semver = "1.0.28"
reqwest = "0.12"

cowen-common = { path = "../../core/cowen-common" }
cowen-capabilities = { path = "../../core/cowen-capabilities" }
cowen-macros = { path = "../../core/cowen-macros" }
cowen-config = { path = "../../services/cowen-config" }
cowen-auth = { path = "../../services/cowen-auth" }
cowen-store = { path = "../../services/cowen-store" }
