[package]
name = "cowen-wasm-facade"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.12"
tracing = "0.1"
extism = "1.30.0"
semver = "1.0.28"

cowen-common = { path = "../../core/cowen-common" }
cowen-capabilities = { path = "../../core/cowen-capabilities" }
