[package]
publish = false
name = "cowen-wasm-facade"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cowen-capabilities = { path = "../../core/cowen-capabilities" }

cowen-common = { path = "../../core/cowen-common" }
extism = "1.30.0"
reqwest = "0.12"
semver = "1.0.28"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
