[package]
publish = false
name = "cowen-cli"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "cowen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
config = "0.15"
cowen-common = { path = "../../core/cowen-common" }
cowen-sys = { path = "../../core/cowen-sys" }
directories = "6.0"
open = "5.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form", "query"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }
tokio = { version = "1.50", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"
tracing = "0.1"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
axum = { version = "0.8", features = ["json"] }
cowen-store = { path = "../../services/cowen-store" }
predicates = "3.1"
sysinfo = "0.38"
tempfile = "3.16"


