[package]
name = "cowen-daemon"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
cowen-auth = { path = "../../services/cowen-auth" }
cowen-capabilities = { path = "../../core/cowen-capabilities" }
cowen-common = { path = "../../core/cowen-common" }
cowen-config = { path = "../../services/cowen-config" }
cowen-grpc-facade = { path = "../../adapters/cowen-grpc-facade" }
cowen-monitor = { path = "../../services/cowen-monitor" }
cowen-server = { path = "../../app/cowen-server" }
cowen-store = { path = "../../services/cowen-store", features = ["all-stores"] }
cowen-sys = { path = "../../core/cowen-sys" }
cowen-wasm-facade = { path = "../../adapters/cowen-wasm-facade" }
rustls = { version = "0.23", features = ["ring"] }
serde_yaml = "0.9"

tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1"

# gRPC access layer dependencies
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[build-dependencies]
tonic-build = "0.12"
