[package]
name = "cowen-server"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "socks"] }
sysinfo = "0.38"
fs2 = "0.4"
uuid = { version = "1.12", features = ["v4"] }
directories = "6.0"
connector-sdk = { path = "../../../../../sdk/rust" }
cowen-common = { path = "../../core/cowen-common", features = ["reqwest"] }
cowen-infra = { path = "../../core/cowen-infra" }
cowen-sys = { path = "../../core/cowen-sys" }
cowen-macros = { path = "../../core/cowen-macros" }
cowen-config = { path = "../../services/cowen-config" }
cowen-auth = { path = "../../services/cowen-auth" }
cowen-store = { path = "../../services/cowen-store" }
cowen-monitor = { path = "../../services/cowen-monitor" }
cowen-search = { path = "../../services/cowen-search" }
cowen-doctor = { path = "../../services/cowen-doctor" }
prometheus = "0.13"
arc-swap = "1.9.1"

scopeguard = "1.2"
rand = "0.8"
futures = "0.3.32"
tokio-util = { version = "0.7.18", features = ["full", "rt"] }
tokio-stream = "0.1"
extism = "1.30.0"
notify = "6.1.1"
tonic = "0.12"
semver = "1.0.28"

cowen-capabilities = { path = "../../core/cowen-capabilities" }
cowen-grpc-facade = { path = "../../adapters/cowen-grpc-facade" }
cowen-wasm-facade = { path = "../../adapters/cowen-wasm-facade" }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
wat = "1.251.0"


