[package]
name = "cowen-server"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
# cowen-monitor = { path = "../../services/cowen-monitor" }
# cowen-search = { path = "../../services/cowen-search" }
# cowen-doctor = { path = "../../services/cowen-doctor" }
# prometheus = "0.13"
arc-swap = "1.9.1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
# directories = "6.0"
connector-sdk = { path = "../../../../../sdk/rust" }
cowen-auth = { path = "../../services/cowen-auth" }

cowen-capabilities = { path = "../../core/cowen-capabilities" }
cowen-common = { path = "../../core/cowen-common", features = ["reqwest"] }
# cowen-macros = { path = "../../core/cowen-macros" }
cowen-config = { path = "../../services/cowen-config" }
cowen-grpc-facade = { path = "../../adapters/cowen-grpc-facade" }
cowen-infra = { path = "../../core/cowen-infra" }
cowen-store = { path = "../../services/cowen-store" }
cowen-sys = { path = "../../core/cowen-sys" }
cowen-wasm-facade = { path = "../../adapters/cowen-wasm-facade" }
# tokio-stream = "0.1"
extism = "1.30.0"
notify = "6.1.1"
# scopeguard = "1.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "socks"] }
# tonic = "0.12"
semver = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
# futures = "0.3.32"
tokio-util = { version = "0.7.18", features = ["full", "rt"] }
tracing = "0.1"
# sysinfo = "0.38"
# fs2 = "0.4"
uuid = { version = "1.12", features = ["v4"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
wat = "1.251.0"


