[package]
publish = false
name = "cowen-server"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
arc-swap = "1.9.1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde", "clock"] }
connector-sdk = { path = "../../../../../sdk/rust" }
cowen-auth = { path = "../../services/cowen-auth" }

cowen-capabilities = { path = "../../core/cowen-capabilities" }
cowen-common = { path = "../../core/cowen-common", features = ["reqwest"] }

cowen-config = { path = "../../services/cowen-config" }
cowen-gateway = { path = "../../core/cowen-gateway" }
cowen-grpc-facade = { path = "../../adapters/cowen-grpc-facade" }
cowen-infra = { path = "../../core/cowen-infra" }
cowen-store = { path = "../../services/cowen-store" }
cowen-sys = { path = "../../core/cowen-sys" }
cowen-wasm-facade = { path = "../../adapters/cowen-wasm-facade" }
extism = "1.30.0"
notify = "6.1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "socks"] }
semver = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full", "rt"] }
tracing = "0.1"
uuid = { version = "1.12", features = ["v4"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
wat = "1.251.0"


