[package]
name = "cowen-capabilities"
version = "0.4.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
cowen-auth = { path = "../../services/cowen-auth" }

cowen-common = { path = "../cowen-common" }
cowen-config = { path = "../../services/cowen-config" }
cowen-doctor = { path = "../../services/cowen-doctor" }
cowen-infra = { path = "../cowen-infra" }
cowen-macros = { path = "../cowen-macros" }
cowen-monitor = { path = "../../services/cowen-monitor" }
cowen-search = { path = "../../services/cowen-search" }
cowen-store = { path = "../../services/cowen-store" }
reqwest = { version = "0.12", features = ["json", "socks"] }
semver = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
tracing = "0.1"
